add a script label

--- a/test.html
+++ b/test.html
@@ -8,5 +8,8 @@
 <p>hellow!jjjjjjjjjjjjjxxxxxxxxjj</p>
   <p>helxxxxxjj</p>
   <p>hellow!jj</p>
+  <script>
+  console.log(321213);
+  </script>
 </body>
 </html>
