--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
   <p>helxxxxxjj</p>
   <p>hellow!jj</p>
   <script>
-  console.log(321213);
+  console.log(555555555555555555555555555555555555);
   </script>
 </body>
 </html>
