--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
   <p>hellow!jj</p>
   <script>
   console.log(555555555555555555555555555555555555);
+  console.log(555555555888888);
   </script>
 </body>
 </html>
