--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
   <p>helxxxxxjj</p>
   <p>hellow!jj</p>
   <script>
-  console.log(555555555555555555555555555555555555);
+  console.log(5);
   console.log(555555555888888);
   </script>
 </body>
